--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Luke Williams
 ---
-Welcome to Luke Williams personal website! 
+<header> Welcome to Luke Williams personal website! 
