--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Luke Williams
 ---
-<header> Welcome to Luke Williams personal website! 
+<h1> Welcome to Luke Williams personal website! </h1>
