--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 title: Luke Williams
 ---
+<html>
+<body>
+  
 <h1> Welcome to Luke Williams personal website! </h1>
+<p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome to my website. feel free to explore to get to know me better </p>
