--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Luke Williams
   
 <h1> Welcome to Luke Williams personal website! </h1>
   
-  <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome to my website. feel free to explore to get to know me better. </p>
+  <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome and feel free to explore to get to know me better. </p>
 
   <p> Press any of the buttons above to explore more features of this website. </p>
   
@@ -15,7 +15,7 @@ title: Luke Williams
   
   <h2> Links: </h2>
   
-  <a href="https://www.linkedin.com/in/luke-williams-t102701/"></a>
+  <a href="https://www.linkedin.com/in/luke-williams-t102701/">https://www.linkedin.com/in/luke-williams-t102701/</a>
   
 </body>
 </html>
