--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Luke Williams
   
   <h2> Links: </h2>
   
-  <a href="https://www.linkedin.com/in/luke-williams-t102701/">https://www.linkedin.com/in/luke-williams-t102701/</a>
+  <p> LinkedIn:</p><a href="https://www.linkedin.com/in/luke-williams-t102701/">https://www.linkedin.com/in/luke-williams-t102701/</a>
   
 </body>
 </html>
