--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: default
 title: Luke Williams
 ---
 <html>
-<body>
+  <body>
   
-<h1> Welcome to Luke Williams personal website! </h1>
+    <h1> Welcome to Luke Williams personal website! </h1>
   
-  <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome and feel free to explore to get to know me better. </p>
+      <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome and feel free to explore to get to know me better. </p>
 
-  <p> Press any of the buttons above to explore more features of this website. </p>
+      <p> Press any of the buttons above to explore more features of this website. </p>
   
-  <p> While you are on the main page here are some important links. </p>
+      <p> While you are on the main page here are some important links. </p>
   
-  <h2> Links: </h2>
+    <h2> Links: </h2>
   
-  <a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">https://www.linkedin.com/in/luke-williams-t102701/</a>
+      <p><a title="https://www.linkedin.com/in/luke-williams-t102701/" href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">LinkedIn:</a></p>
   
-</body>
+  </body>  
 </html>
