--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Luke Williams
   
     <h2> Links: </h2>
   
-      <p><a title="https://www.linkedin.com/in/luke-williams-t102701/" href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">LinkedIn:</a></p>
+      <p>LinkedIn:<a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">"https://www.linkedin.com/in/luke-williams-t102701/":</a></p>
   
   </body>  
 </html>
