--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ title: Luke Williams
 
       <a href="https://ibb.co/ydGbzQc"><img src="https://i.ibb.co/2Wmfzk1/Rev-Tony-Wagner-6952.jpg" alt="Rev-Tony-Wagner-6952" border="0"></a>
     
-      <p> Press any of the buttons above to explore more features of this website. </p>
+      <p> Press any of the buttons at the top of the page to explore more features of this website. </p>
   
       <p> While you are on the main page here are some important links. </p>
   
     <h2> Links: </h2>
   
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">"https://www.linkedin.com/in/luke-williams-t102701/":</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">https://www.linkedin.com/in/luke-williams-t102701/</a></p>
   
   </body>  
 </html>
