--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@ title: Luke Williams
 
       <a href="https://ibb.co/ydGbzQc"><img src="https://i.ibb.co/2Wmfzk1/Rev-Tony-Wagner-6952.jpg" alt="Rev-Tony-Wagner-6952" border="0"></a>
     
+      <p> Here is an image of me to start.
+    
       <p> Press any of the buttons at the top of the page to explore more features of this website. </p>
   
-      <p> While you are on the main page here are some important links. </p>
+      <p> But while you are on the main page here are some important links. </p>
   
     <h2> Links: </h2>
   
