--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -7,8 +7,8 @@ title: About Me (Professional)
 
         <h2>Valet Driver</h2>
             <h3> Xpress Valet </h3>
-                <p><strong>Dates:</strong> September 2019 - Present </p>
-                <p><strong>Location:</strong> Lexington, KY </p>
+                <p><strong>Dates:</strong> September 2019 - Present
+                <strong>Location:</strong> Lexington, KY </p>
                 <ul>
                     <li>Provide valet services to customers at contracted businesses including Keeneland and Dudley's on Short Street.</li>
                     <li>Transport many high-value vehicles.</li>
