--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -7,7 +7,7 @@ title: About Me (Professional)
 
         <h2>Valet Driver</h2>
             <h3> Xpress Valet </h3>
-                <p><strong>Dates:</strong> September 2019 - Present
+                <p><strong>Dates:</strong> September 2019 - Present <br />
                 <strong>Location:</strong> Lexington, KY </p>
                 <ul>
                     <li>Provide valet services to customers at contracted businesses including Keeneland and Dudley's on Short Street.</li>
