--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -16,8 +16,8 @@ title: About Me (Professional)
                 </ul>
         <h2>Student Board Member</h2>
             <h3> Federal Reserve Bank of Cleveland </h3>
-                <p><strong>Dates:</strong> September 2018 - May 2019 </p>
-                <p><strong>Location:</strong> Cincinnati, OH </p>
+                <p><strong>Dates:</strong> September 2018 - May 2019 <br />
+                <strong>Location:</strong> Cincinnati, OH </p>
                 <ul>
                     <li>Gained useful life skills and information for my future in the real world.</li>
                     <li>Learned interview skills, how to budget, credit scores, etc.</li>
@@ -25,16 +25,16 @@ title: About Me (Professional)
                 </ul>
         <h2>Ticket Salesman and Clock Operator</h2>
             <h3> Campbell County High School </h3>
-                <p><strong>Dates:</strong> August 2018 - March 2019 </p>
-                <p><strong>Location:</strong> Alexandria, KY </p>
+                <p><strong>Dates:</strong> August 2018 - March 2019 <br />
+                <strong>Location:</strong> Alexandria, KY </p>
                 <ul>
                     <li>Collected and processed incoming money for various sporting events.</li>
                     <li>Catered to custoemrs from all different backgrounds.</li>
                 </ul>
         <h2>Cart Attendant</h2>
             <h3> Hickory Sticks Golf Club </h3>
-                <p><strong>Dates:</strong> July 2017 - January 2018 </p>
-                <p><strong>Location:</strong> California, KY </p>
+                <p><strong>Dates:</strong> July 2017 - January 2018 <br />
+                <strong>Location:</strong> California, KY </p>
                 <ul>
                     <li>Ensured cart and course maintenance to maximize course conditions and customer feedback.</li>
                     <li>Led team of employees by being proactive, assisting in multiple tasks, managing time, and assigning roles.</li>
