--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -3,7 +3,46 @@ layout: aboutMe
 permalink: /aboutMeProfessional/
 title: About Me (Professional)
 ---
-    <h1> Experience </h1>
+    <h1> Skills </h1>
+
+        <h2> Certifications </h2>
+                <ul>
+                    <li> LEAN Systems Student Certification </li>
+                </ul>
+                <p>Exposed to some of the core True Lean principles and practices and how they fit together as a system to provide a different way of looking at things. Learned skills that enable me to look at a process, identify a prioritized problem, address that problem to keep it from coming back and then, move on to the next problem.</p>
+        <h2> Proficient </h2>
+                <ul>
+                    <li> C++ programming language </li>
+                    <li> Unix/Linux operating system </li>
+                    <li> Microsoft Word, Excel, and Powerpoint </li>
+                    <li> Social Media platforms </li>
+                </ul>
+        <h2> Novice </h2>
+                <ul>
+                    <li> R programming language </li>
+                    <li> Java programming language </li>
+                    <li> MATLAB programming language </li>
+                    <li> HTML language </li>
+                    <li> GNU Debugger (GDB) </li>
+                    <li> Shell Script </li>
+                    <li> Valgrind </li>
+                    <li> Windows </li>
+                    <li> Spanish Language </li>
+                </ul>
+        <h2> Prominent Charecteristics </h2>
+                <ul>
+                    <li> Leadership </li>
+                    <li> Diligence </li>
+                    <li> Interpersonal </li>
+                    <li> Customer Service </li>
+                    <li> Organization </li>
+                    <li> Dependability </li>
+                    <li> Teamwork </li>
+                    <li> Always Learning </li>
+                    <li> Adaptive/Flexibile </li>
+                </ul>
+    
+    <h1> <br /> <br /> Experience </h1>
 
         <h2>Valet Driver</h2>
             <h3> Xpress Valet </h3>
