--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -41,8 +41,18 @@ title: About Me (Professional)
                     <li> Always Learning </li>
                     <li> Adaptive/Flexibile </li>
                 </ul>
+
+    <h1> <br /> Education </h1>
+        <h2> Bachelor of Science in Computer Science - Minor in Mathematics </h2>
+            <h3> University of Kentucky - Lexington, KY </h3>
+                <p><strong>Expected Graduation:</strong> May 2023 </p>
+                <p> Lewis Honors College - SEAM Honors Pathway
+                <ul>
+                    <li> Program that combines engineering and business to build leadership skills and real-world ready students</li>
+                </ul></p>
+                <p> Cumulative GPA: 4.0 </p>
     
-    <h1> <br /> <br /> Experience </h1>
+    <h1> <br /> Experience </h1>
 
         <h2>Valet Driver</h2>
             <h3> Xpress Valet </h3>
