--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -43,14 +43,14 @@ title: About Me (Professional)
                 </ul>
 
     <h1> <br /> Education </h1>
-        <h2> Bachelor of Science in Computer Science - Minor in Mathematics </h2>
+        <h2> Bachelor of Science in Computer Science <br /> Minor in Mathematics </h2>
             <h3> University of Kentucky - Lexington, KY </h3>
                 <p><strong>Expected Graduation:</strong> May 2023 </p>
+                <p> Cumulative GPA: 4.0 </p>
                 <p> Lewis Honors College - SEAM Honors Pathway
                 <ul>
                     <li> Program that combines engineering and business to build leadership skills and real-world ready students</li>
                 </ul></p>
-                <p> Cumulative GPA: 4.0 </p>
     
     <h1> <br /> Experience </h1>
 
