--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -51,6 +51,12 @@ title: About Me (Professional)
                 <ul>
                     <li> Program that combines engineering and business to build leadership skills and real-world ready students</li>
                 </ul></p>
+                <p> Honors and Awards
+                <ul>
+                    <li> Dean's List (University of Kentucky) - awarded for achieving a 4.0 GPA </li>
+                    <li> Presidential Scholarship - awarded for ACT score, GPA, and participation in Governors Scholars Program </li>
+                    <li> Henson Endow Engineering Scholarship - awarded for ACT score, GPA, and chosen major </li>
+                </ul></p>
     
     <h1> <br /> Experience </h1>
 
