--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -57,6 +57,7 @@ title: About Me (Professional)
                     <li> Presidential Scholarship - awarded for ACT score, GPA, and participation in Governors Scholars Program </li>
                     <li> Henson Endow Engineering Scholarship - awarded for ACT score, GPA, and chosen major </li>
                 </ul></p>
+                    <p> Relevant Coursework <br />  Introduction to Programming Design Abstraction/Problem Solving; Fundamentals of Engineering Computing; Technology: Blessing or Curse; Leadership; Intro to Software Engineering Techniques; Design of Logic Circuits </p>
     
     <h1> <br /> Experience </h1>
 
