--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -98,4 +98,29 @@ title: About Me (Professional)
                     <li>Ensured cart and course maintenance to maximize course conditions and customer feedback.</li>
                     <li>Led team of employees by being proactive, assisting in multiple tasks, managing time, and assigning roles.</li>
                 </ul>
-          
+    <h1> Involvement </h1>
+        <h2> University of Kentucky Association of Computing Machinery (ACM) </h2>
+            <h3> Social Media Chair </h3>
+                <p><strong>Dates:</strong> September 2020 - Present</p>
+                <ul>
+                    <li>Fulfill all social media needs for the chapter including any graphic design jobs</li>
+                    <li>Responsible for attending and contributing to officer meetings</li>
+                </ul>
+        <h2> Phi Sigma Phi Honors Society </h2>
+            <p><strong>Dates:</strong> October 2020 - Present </p>
+            <p> Society that recognizes and promotes academic excellence in all fields of higher education and engages the community of scholars in service to others. </p>
+        <h2> Tau Beta Pi Honors Society </h2>
+            <p><strong>Dates:</strong> November 2020 - Present </p>
+            <p> Society built on the foundations of charecter, ethics, and academics. </p>
+        <h2> Energy Club </h2>
+            <p><strong>Dates:</strong> January 2020 - Present </p>
+            <ul>
+                <li>Worked on hydroelectric prototype to inform the student body on energy matters.</li>
+                <li>Attend all club meetings.</li>
+            </ul>
+        <h2> Intramural Sports </h2>
+            <p><strong>Dates:</strong> August 2019 - March 2020 </p>
+            <p> Participated in intramural flag football and basketball during the school year </p>
+
+    <h3> Anything else you may want to know might be found in my CV </h3>
+        <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing">Luke Williams CV</a></p>
