--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -98,7 +98,7 @@ title: About Me (Professional)
                     <li>Ensured cart and course maintenance to maximize course conditions and customer feedback.</li>
                     <li>Led team of employees by being proactive, assisting in multiple tasks, managing time, and assigning roles.</li>
                 </ul>
-    <h1> Involvement </h1>
+    <h1> <br /> Involvement </h1>
         <h2> University of Kentucky Association of Computing Machinery (ACM) </h2>
             <h3> Social Media Chair </h3>
                 <p><strong>Dates:</strong> September 2020 - Present</p>
@@ -122,5 +122,5 @@ title: About Me (Professional)
             <p><strong>Dates:</strong> August 2019 - March 2020 </p>
             <p> Participated in intramural flag football and basketball during the school year </p>
 
-    <h3> Anything else you may want to know might be found in my CV </h3>
+    <h3> <br /> <br /> Anything else you may want to know might be found in my CV </h3>
         <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing">Luke Williams CV</a></p>
