--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -123,4 +123,4 @@ title: About Me (Professional)
             <p> Participated in intramural flag football and basketball during the school year </p>
 
     <h3> <br /> <br /> Anything else you may want to know might be found in my CV </h3>
-        <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing">Luke Williams CV</a></p>
+        <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing" target="_blank">Luke Williams CV</a></p>
