--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -7,5 +7,6 @@ title: About Me (Personal)
 <body>
   <h1> Family </h1>
   <a href="https://ibb.co/Tt99rKP"><img src="https://i.ibb.co/BB00w4T/familylandscape.jpg" alt="familylandscape" border="0"></a>
-  <p> I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella). Here are pictures of them and I.
+  <p> <br />I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella).</p>
+  <p>Here are pictures of them and I.<br /></p>
     <a href="https://ibb.co/M5LMBrH"><img src="https://i.ibb.co/rfJ4dYh/meand-Trev.jpg" alt="meand-Trev" border="0"></a></p>
