--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -10,3 +10,8 @@ title: About Me (Personal)
   <p> <br />I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella).</p>
   <p>Here are pictures of them and I.<br /></p>
     <a href="https://ibb.co/M5LMBrH"><img src="https://i.ibb.co/rfJ4dYh/meand-Trev.jpg" alt="meand-Trev" border="0"></a></p>
+<h1> Friends </h1>
+<p> <br /> I've made many friends throughout my life. I have friends from high school and friends I've met at college. All of these people play a special role in my life. I will include some pictures below. </p>
+<a href="https://ibb.co/9htjNFs"><img src="https://i.ibb.co/PMQ8N7w/IMG-0993.jpg" alt="IMG-0993" border="0"></a>
+<a href="https://ibb.co/KbP9fyQ"><img src="https://i.ibb.co/WGhcMKd/IMG-0449-1.jpg" alt="IMG-0449-1" border="0"></a>
+<a href="https://ibb.co/HtQbpQb"><img src="https://i.ibb.co/6H5TJ5T/IMG-0481-1.jpg" alt="IMG-0481-1" border="0"></a>
