--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -6,13 +6,17 @@ title: About Me (Personal)
 
 <body>
   <h1> Family </h1>
-  <a href="https://ibb.co/Tt99rKP"><img src="https://i.ibb.co/BB00w4T/familylandscape.jpg" alt="familylandscape" border="0"></a>
-  <p> <br />I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella).</p>
-  <p>Here are pictures of them and I.<br /></p>
-    <a href="https://ibb.co/M5LMBrH"><img src="https://i.ibb.co/rfJ4dYh/meand-Trev.jpg" alt="meand-Trev" border="0"></a></p>
-<h1> Friends </h1>
-<p> <br /> I've made many friends throughout my life. I have friends from high school and friends I've met at college. All of these people play a special role in my life. I will include some pictures below. </p>
-<a href="https://ibb.co/9htjNFs"><img src="https://i.ibb.co/PMQ8N7w/IMG-0993.jpg" alt="IMG-0993" border="0"></a>
-<a href="https://ibb.co/KbP9fyQ"><img src="https://i.ibb.co/WGhcMKd/IMG-0449-1.jpg" alt="IMG-0449-1" border="0"></a>
-<a href="https://ibb.co/HtQbpQb"><img src="https://i.ibb.co/6H5TJ5T/IMG-0481-1.jpg" alt="IMG-0481-1" border="0"></a>
-<a href="https://ibb.co/ccWRCcM"><img src="https://i.ibb.co/8DyGdDT/IMG-0087.jpg" alt="IMG-0087" border="0"></a>
+      <a href="https://ibb.co/Tt99rKP"><img src="https://i.ibb.co/BB00w4T/familylandscape.jpg" alt="familylandscape" border="0"></a>
+    <p> <br />I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella).</p>
+    <p>Here are pictures of them and I.<br /></p>
+      <a href="https://ibb.co/M5LMBrH"><img src="https://i.ibb.co/rfJ4dYh/meand-Trev.jpg" alt="meand-Trev" border="0"></a></p>
+    <p> <br /> Not just my immediate family matters to me. I love all of my family from both my mom and dads side. Here are some more pictures. </p>
+      <a href="https://ibb.co/5MxJNxg"><img src="https://i.ibb.co/BzKYXK5/IMG-0788.jpg" alt="IMG-0788" border="0"></a>
+      <a href="https://ibb.co/Wk5zW8C"><img src="https://i.ibb.co/wSgQNGt/IMG-0273.jpg" alt="IMG-0273" border="0"></a>
+  
+  <h1> Friends </h1>
+    <p> <br /> I've made many friends throughout my life. I have friends from high school and friends I've met at college. All of these people play a special role in my life. I will include some pictures below. </p>
+      <a href="https://ibb.co/9htjNFs"><img src="https://i.ibb.co/PMQ8N7w/IMG-0993.jpg" alt="IMG-0993" border="0"></a>
+      <a href="https://ibb.co/KbP9fyQ"><img src="https://i.ibb.co/WGhcMKd/IMG-0449-1.jpg" alt="IMG-0449-1" border="0"></a>
+      <a href="https://ibb.co/HtQbpQb"><img src="https://i.ibb.co/6H5TJ5T/IMG-0481-1.jpg" alt="IMG-0481-1" border="0"></a>
+      <a href="https://ibb.co/ccWRCcM"><img src="https://i.ibb.co/8DyGdDT/IMG-0087.jpg" alt="IMG-0087" border="0"></a>
