--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -14,9 +14,51 @@ title: About Me (Personal)
       <a href="https://ibb.co/5MxJNxg"><img src="https://i.ibb.co/BzKYXK5/IMG-0788.jpg" alt="IMG-0788" border="0"></a>
       <a href="https://ibb.co/Wk5zW8C"><img src="https://i.ibb.co/wSgQNGt/IMG-0273.jpg" alt="IMG-0273" border="0"></a>
   
-  <h1> Friends </h1>
+  <h1> <br /> Friends </h1>
     <p> <br /> I've made many friends throughout my life. I have friends from high school and friends I've met at college. All of these people play a special role in my life. I will include some pictures below. </p>
       <a href="https://ibb.co/9htjNFs"><img src="https://i.ibb.co/PMQ8N7w/IMG-0993.jpg" alt="IMG-0993" border="0"></a>
       <a href="https://ibb.co/KbP9fyQ"><img src="https://i.ibb.co/WGhcMKd/IMG-0449-1.jpg" alt="IMG-0449-1" border="0"></a>
       <a href="https://ibb.co/HtQbpQb"><img src="https://i.ibb.co/6H5TJ5T/IMG-0481-1.jpg" alt="IMG-0481-1" border="0"></a>
       <a href="https://ibb.co/ccWRCcM"><img src="https://i.ibb.co/8DyGdDT/IMG-0087.jpg" alt="IMG-0087" border="0"></a>
+
+  <h1> <br /> Things I Love </h1>
+    <h2> University of Kentucky </h2>
+      <p> One of my favorite things is the University of Kentucky. I've been a Kentucky basketball and football fan for a while. I go to school at UK and I love it even more now. UK is helping me achieve my goals and I can not thank them enough for that. </p>
+        <a href="https://ibb.co/Y8PBpY2"><img src="https://i.ibb.co/82Ng6TM/IMG-3009.jpg" alt="IMG-3009" border="0"></a>
+        <a href="https://images.app.goo.gl/BretRynuSbHPAJ2R8"></a>
+        <a href="https://ibb.co/VDWZyNF"><img src="https://i.ibb.co/S0X8Txk/IMG-0953.jpg" alt="IMG-0953" border="0"></a>
+    <h2> Sports </h2>
+      <p> I love sports. I've had a long history with sports as I expereimented with almost all sports in my childhood. During high school I played 4 years of tennis and 1 year of golf. In my free time (pre-COVID) you could find me playing any type of sport. I love playing pickup basketball or touch football. I also enjoy watching sports in person or on TV. I love to play fantasy football. Any and all sports entertain me. Some of my favorite sports teams are the Kentucky Wildcats (obviously), Cincinnati Bengals, and Cincinnati Reds. </p>
+        <a href="https://ibb.co/B4GJ56K"><img src="https://i.ibb.co/SQcg4m7/IMG-0336.jpg" alt="IMG-0336" border="0"></a>
+        <a href="https://ibb.co/CKPtrB1"><img src="https://i.ibb.co/5hK97TM/IMG-0802.jpg" alt="IMG-0802" border="0"></a>
+        <a href="https://ibb.co/s9NpJwK"><img src="https://i.ibb.co/3mj5YNp/IMG-0084.jpg" alt="IMG-0084" border="0"></a>
+    <h2> Working Out </h2>
+      <p> I started working out my junior year of high school and have been in love with it since. I am a very competitive person so the feeling of always competing against yourself pushes me. I do not have any pictures to show my love for working out, but it does play a major role in my life. </p>
+    <h2> The Lake </h2>
+      <p> When I was a little kid my family would go to the Lake Cumberland in Kentucky and stay at my grandma and grandpas place. As I got older my family went to the lake every summer with our family friends. I have some of my best memories at the lake. Although it is an unpopular opinion I think I would take the lake over the beach anyday. </p>
+        <a href="https://ibb.co/GJnf6Q7"><img src="https://i.ibb.co/TTYDfMc/IMG-0107.jpg" alt="IMG-0107" border="0"></a>
+    <h2> Video Games </h2>
+      <p> I enjoy video games because the games themselves are fun, but really what makes me love video games is the time I get to spend with my friends on them. I have spent nights laughing while playing games with my friends. Videos games are one thing that really helped me get through the COVID-19 pandemic. </p>
+    <h2> Computer Science </h2>
+      <p> When I was younger my favorite subject in school was math. Math always came easy to me and I liked how there was always a definitive answer. When I learned what coding and computer science were I really started to enjoy working on school work. Computer science is a passion of mine and I am excited to see where it might take me in my career and life. </p>
+  <h1> Favorite Things </h1>
+    <h2> Color </h2>
+      <h3> Blue </h3>
+
+    <h2> Food </h2>
+      <h3> Chicken Fettuccine Alfredo with Broccoli </h3>
+
+    <h2> Dessert </h2>
+      <h3> Brownies or a milkshake </h3>
+
+    <h2> Sport </h2>
+      <h3> Basketball </h3>
+
+    <h2> Movie </h2>
+      <h3> Super 8 </h3>
+
+    <h2> TV Show </h2>
+      <h3> The 100 </h3>
+
+    <h2> Book </h2>
+      <h3> The Shack </h3>
