--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -43,7 +43,7 @@ title: About Me (Personal)
       <p> When I was younger my favorite subject in school was math. Math always came easy to me and I liked how there was always a definitive answer. When I learned what coding and computer science were I really started to enjoy working on school work. Computer science is a passion of mine and I am excited to see where it might take me in my career and life. </p>
   <h1> Favorite Things </h1>
     <h2> Color </h2>
-      <h3> Blue </h3>
+      <h3 style="color:blue;">Blue </h3>
 
     <h2> Food </h2>
       <h3> Chicken Fettuccine Alfredo with Broccoli </h3>
