--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -10,9 +10,11 @@ title: About Me (Personal)
     <p> <br />I am the oldest of three siblings. I have one younger brother (Trevor) and one younger sister (Ella).</p>
     <p>Here are pictures of them and I.<br /></p>
       <a href="https://ibb.co/M5LMBrH"><img src="https://i.ibb.co/rfJ4dYh/meand-Trev.jpg" alt="meand-Trev" border="0"></a></p>
+      <a href="https://ibb.co/5MMzpt9"><img src="https://i.ibb.co/qyy4qXn/IMG-0959.jpg" alt="IMG-0959" border="0"></a>
     <p> <br /> Not just my immediate family matters to me. I love all of my family from both my mom and dads side. Here are some more pictures. </p>
       <a href="https://ibb.co/5MxJNxg"><img src="https://i.ibb.co/BzKYXK5/IMG-0788.jpg" alt="IMG-0788" border="0"></a>
       <a href="https://ibb.co/Wk5zW8C"><img src="https://i.ibb.co/wSgQNGt/IMG-0273.jpg" alt="IMG-0273" border="0"></a>
+      <a href="https://imgbb.com/"><img src="https://i.ibb.co/3YpHnJB/IMG-0958.jpg" alt="IMG-0958" border="0"></a>
   
   <h1> <br /> Friends </h1>
     <p> <br /> I've made many friends throughout my life. I have friends from high school and friends I've met at college. All of these people play a special role in my life. I will include some pictures below. </p>
