--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -3,6 +3,8 @@ layout: aboutMe
 permalink: /aboutMeProfessional/
 title: About Me (Professional)
 ---
+<a href="https://ibb.co/VHCpwW1"><img src="https://i.ibb.co/q0gFJMS/unnamed.jpg" alt="unnamed" border="0"></a>
+
     <h1> Skills </h1>
 
         <h2> Certifications </h2>
