--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@ title: Projects
 
 <h1 style="color:black;">Linked below are my projects.<br />Click on them to find out more!</h1>
 
-<a href="ltw10.github.io/projects/personalWebsite.html" style="btn">Github Personal Website</a>
-<a href="ltw10.github.io/projects/pingPongBallLauncher.html" style="btn">Ping Pong Ball Launcher</a>
-<a href="ltw10.github.io/projects/pokerGame.html" style="btn">Poker Game</a>
+<a href="https://ltw10.github.io/projects/personalWebsite.html" style="btn">Github Personal Website</a>
+<a href="https://ltw10.github.io/projects/pingPongBallLauncher.html" style="btn">Ping Pong Ball Launcher</a>
+<a href="https://ltw10.github.io/projects/pokerGame.html" style="btn">Poker Game</a>
 
 
 
