--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@ title: Projects
 
   <h1 style="color:black;">Linked below are my projects.<br />Click on them to find out more!</h1>
 
-    <a href="https://ltw10.github.io/projects/personalWebsite/" style="btn">Github Personal Website</a>
-    <a href="https://ltw10.github.io/projects/pingPongBallLauncher/" style="btn">Ping Pong Ball Launcher</a>
+    <a href="https://ltw10.github.io/projects/personalWebsite/" style="btn">Github Personal Website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://ltw10.github.io/projects/pingPongBallLauncher/" style="btn">Ping Pong Ball Launcher</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://ltw10.github.io/projects/pokerGame/" style="btn">Poker Game</a>
 
 
