--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,16 @@ title: Projects
 ---
 
   <h1 style="color:black;">Linked below are my projects.<br />Click on them to find out more!</h1>
+  <br />
 
-    <a href="https://ltw10.github.io/projects/personalWebsite/" style="btn">Github Personal Website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://ltw10.github.io/projects/pingPongBallLauncher/" style="btn">Ping Pong Ball Launcher</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://ltw10.github.io/projects/pokerGame/" style="btn">Poker Game</a>
+    <p><a href="https://ltw10.github.io/projects/personalWebsite/" style="btn">Github Personal Website</a></p>
+    <p><a href="https://ltw10.github.io/projects/pingPongBallLauncher/" style="btn">Ping Pong Ball Launcher</a></p>
+    <p><a href="https://ltw10.github.io/projects/pokerGame/" style="btn">Poker Game</a></p>
+
+  <h1 style="color:black;">Social Media Accounts</h1>
+    <h2> These are the social media accounts that I run for the UKY ACM. These are to give you an idea of my skills with social media platforms </h2>
+      <a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>
+      <a href="https://www.instagram.com/ukyacm/">Link to UKY ACM Instagram</a>
 
 
 
