--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,15 @@ permalink: /projects/
 title: Projects
 ---
 
-  <h1 style="color:black;">Linked below are my projects.<br />Click on them to find out more!</h1>
+  <h4>Linked below are my projects.<br />Click on them to find out more!</h4>
   <br />
 
     <p><strong><a href="https://ltw10.github.io/projects/personalWebsite/" font-size: 1.875em;>Github Personal Website</a></strong></p>
     <p><strong><a href="https://ltw10.github.io/projects/pingPongBallLauncher/" style="btn">Ping Pong Ball Launcher</a></strong></p>
     <p><strong><a href="https://ltw10.github.io/projects/pokerGame/" style="btn">Poker Game</a></strong></p>
 
-  <h1 style="color:black;">Social Media Accounts</h1>
-    <h2> These are the social media accounts that I run for the UKY ACM. These are to give you an idea of my skills with social media platforms </h2>
+  <h4>Social Media Accounts</h4>
+    <h5> These are the social media accounts that I run for the UKY ACM. These are to give you an idea of my skills with social media platforms </h5>
       <a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://www.instagram.com/ukyacm/">Link to UKY ACM Instagram</a>
 
