--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@ title: Projects
 
   <h4>Social Media Accounts</h4>
     <h5> These are the social media accounts that I run for the UKY ACM. These are to give you an idea of my skills with social media platforms </h5>
-      <a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://www.instagram.com/ukyacm/">Link to UKY ACM Instagram</a>
+      <p><a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/ukyacm/">Link to UKY ACM Instagram</a></p>
 
 
 
