--- a/projects/personalWebsite.html
+++ b/projects/personalWebsite.html
@@ -4,4 +4,8 @@ permalink: /projects/personalWebsite/
 title: Personal Website
 ---
 
-This is my personal website project that you are looking at right now.
+<h4> My personal website project is the website you are currently looking at </h4>
+
+<h4> Here is a link to the GitHub so you can check out the code and work that went into building this website </h4>
+
+<p><a href="https://github.com/Ltw10/Ltw10.github.io" type="_blank">Personal Website Github</a>
