--- a/projects/personalWebsite.html
+++ b/projects/personalWebsite.html
@@ -8,4 +8,6 @@ title: Personal Website
 
 <h4> Here is a link to the GitHub so you can check out the code and work that went into building this website </h4>
 
-<p><a href="https://github.com/Ltw10/Ltw10.github.io" type="_blank">Personal Website Github</a>
+<br />
+
+<p><a href="https://github.com/Ltw10/Ltw10.github.io" target="_blank">Personal Website Github</a>
