--- a/projects/pingPongBallLauncher.html
+++ b/projects/pingPongBallLauncher.html
@@ -6,6 +6,9 @@ title: Ping Pong Ball Launcher Project
 
 <h5> Robotic Launcher </h5>
 
+<a href="https://ibb.co/NxGdygD"><img src="https://i.ibb.co/0qzRGp4/Untitled-2.png" alt="Untitled-2" border="0"></a>
+<a href="https://ibb.co/GPQjWFQ"><img src="https://i.ibb.co/4NRx8JR/Untitled1-2.png" alt="Untitled1-2" border="0"></a>
+
 <p> During my second semester of college freshmen year a project in one of my classes was to create a mechanical ping pong ball launcher and target system to act as a toy for kids with disabilities. I worked primarily on the coding aspect of the project which dealth with using a camera to find target and distance to target. I learned how to use a neural netwoek to train the camera to identify the target. I designd code to take the distance and compute the launcher angle needed then turn the launcehr towards target and set launch angle. I assisted in using code to light up a scoreboard based on the accuracy of the launcher. </p>
 <p> *Disclaimer* This semester transitioned from in-person to online mid-semester due to the COVID-19 pandemic. You can imagine the struggles of trying to complete this group project while in quarentine. Our final project does not look like what we wished or thought it would look like, but I think our slides are a testement to the work that went in regardless of if we produced a final launcher or not.
 
