--- a/projects/personalWebsite.html
+++ b/projects/personalWebsite.html
@@ -6,6 +6,8 @@ title: Personal Website
 
 <h4> My personal website project is the website you are currently looking at </h4>
 
+<a href="https://ibb.co/2K8krmv"><img src="https://i.ibb.co/f08xWBk/Capture.jpg" alt="Capture" border="0"></a>
+
 <h4> Here is a link to the GitHub so you can check out the code and work that went into building this website </h4>
 
 <br />
