--- a/projects/pokerGame.html
+++ b/projects/pokerGame.html
@@ -8,4 +8,4 @@ title: C++ Poker Game
 <a href="https://ibb.co/hKMt6MF"><img src="https://i.ibb.co/VvNP1NY/Capture2.jpg" alt="Capture2" border="0"></a>
 <p> One project in my C++ class during the Fall semester of my sophomore year was to design a poker game. Since this project was for a class it had very strict methods and output. Although some of the methods I used in this projects are ones that I would not normally use, it was still a cool concept to create using C++. </p>
 
-<p>Link to the Github Repository containing my Poker Game Project:<br />a<></a></p>
+<p>Link to the Github Repository containing my Poker Game Project:<br /><a></a></p>
