--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ title: Luke Williams
       <p> Here is an image of me to start.
     
       <p> Press any of the buttons at the top of the page to explore more features of this website. </p>
+    
+      <p> This whole website was coded using HTML. This was my first ever HTML project </p>
   
       <p> But while you are on the main page here are some important links. </p>
   
