--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ title: Luke Williams
     
       <p> Press any of the buttons at the top of the page to explore more features of this website. </p>
     
-      <p> This whole website was coded using HTML. This was my first ever HTML project </p>
+      <p> This whole website was coded using HTML. This was my first ever HTML project. </p>
   
-      <p> But while you are on the main page here are some important links. </p>
+      <p> While you are on the home page here are some important links. </p>
   
     <h2> Links: </h2>
   
