--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ title: Luke Williams
     <h2> Links: </h2>
   
       <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">https://www.linkedin.com/in/luke-williams-t102701/</a></p>
+      <p>Github Account: <a href="https://github.com/Ltw10" target="_blank">https://github.com/Ltw10</a></p>
   
   </body>  
 </html>
