--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@ permalink: /projects/
 title: Projects
 ---
 
+<a href="https://images.app.goo.gl/pxLdmV6ozNJeRJX7A"</a>
   <h4>Linked below are my projects.<br />Click on them to find out more!</h4>
   <br />
 
