--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@ title: Projects
   <h2>Social Media Accounts</h2>
     <a href="https://ibb.co/2NCBzcZ"><img src="https://i.ibb.co/SrMpkVf/SM-logos-2.png" alt="SM-logos-2" border="0"></a>
     <h5> These are the social media accounts that I run for the UKY ACM. These are to give you an idea of my skills with social media platforms. </h5>
-      <p><a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <p><a href="https://twitter.com/UKCatHacks">Link to CatHacks Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/ukyacm/">Link to UKY ACM Instagram</a></p>
 
 
