--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Luke Williams
 <html>
   <body>
   
-    <h1> Welcome to Luke Williams personal website! </h1>
+    <h1> Welcome to Luke William's personal website! </h1>
   
       <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome and feel free to explore to get to know me better. </p>
 
@@ -22,7 +22,7 @@ title: Luke Williams
     <h2> Links: </h2>
   
       <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-williams-t102701/" target="_blank">https://www.linkedin.com/in/luke-williams-t102701/</a></p>
-      <p>Github Account: <a href="https://github.com/Ltw10" target="_blank">https://github.com/Ltw10</a></p>
+      <p>Github: <a href="https://github.com/Ltw10" target="_blank">https://github.com/Ltw10</a></p>
   
   </body>  
 </html>
