--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -90,7 +90,7 @@ title: About Me (Professional)
                 <strong>Location:</strong> Alexandria, KY </p>
                 <ul>
                     <li>Collected and processed incoming money for various sporting events.</li>
-                    <li>Catered to custoemrs from all different backgrounds.</li>
+                    <li>Catered to customers from all different backgrounds.</li>
                 </ul>
         <h2>Cart Attendant</h2>
             <h3> Hickory Sticks Golf Club </h3>
@@ -113,7 +113,7 @@ title: About Me (Professional)
             <p> Society that recognizes and promotes academic excellence in all fields of higher education and engages the community of scholars in service to others. </p>
         <h2> Tau Beta Pi Honors Society </h2>
             <p><strong>Dates:</strong> November 2020 - Present </p>
-            <p> Society built on the foundations of charecter, ethics, and academics. </p>
+            <p> Society built on the foundations of character, ethics, and academics. </p>
         <h2> Energy Club </h2>
             <p><strong>Dates:</strong> January 2020 - Present </p>
             <ul>
@@ -124,5 +124,5 @@ title: About Me (Professional)
             <p><strong>Dates:</strong> August 2019 - March 2020 </p>
             <p> Participated in intramural flag football and basketball during the school year </p>
 
-    <h3> <br /> <br /> Anything else you may want to know might be found in my CV </h3>
+    <h3> <br /> <br /> Anything else you want to know about me professionally may be found in my CV as it is probably more updated </h3>
         <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing" target="_blank">Luke Williams CV</a></p>
