--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Luke Williams
 <html>
   <body>
   
-    <h1> Welcome to Luke William's personal website! </h1>
+    <h1> Welcome to Luke Williams's personal website! </h1>
   
       <p> Hi, my name is Luke Williams. If you are here you most likely followed this link so you can learn more about me. Welcome and feel free to explore to get to know me better. </p>
 
