--- a/aboutMePersonal.html
+++ b/aboutMePersonal.html
@@ -48,19 +48,19 @@ title: About Me (Personal)
       <h3 style="color:blue;">Blue </h3>
 
     <h2> Food </h2>
-      <h3> Chicken Fettuccine Alfredo with Broccoli </h3>
+      <h3 style="color:green;"> Chicken Fettuccine Alfredo with Broccoli </h3>
 
     <h2> Dessert </h2>
-      <h3> Brownies or a Milkshake </h3>
+      <h3 style="color:green;"> Brownies or a Milkshake </h3>
 
     <h2> Sport </h2>
-      <h3> Basketball </h3>
+      <h3 style="color:green;"> Basketball </h3>
 
     <h2> Movie </h2>
-      <h3> Super 8 </h3>
+      <h3 style="color:green;"> Super 8 </h3>
 
     <h2> TV Show </h2>
-      <h3> The 100 </h3>
+      <h3 style="color:green;"> The 100 </h3>
 
     <h2> Book </h2>
-      <h3> The Shack </h3>
+      <h3 style="color:green;"> The Shack </h3>
