--- a/projects/pingPongBallLauncher.html
+++ b/projects/pingPongBallLauncher.html
@@ -13,4 +13,4 @@ title: Ping Pong Ball Launcher Project
 <p> *Disclaimer* This semester transitioned from in-person to online classes mid-semester due to the COVID-19 pandemic. You can imagine the struggles of trying to complete this group project while in quarantine. Our final project does not look like what we wished or thought it would look like, but I think our final project slides linked below are a testament to the work that went in regardless of if we were actually able to produce a final launcher or not.
 <p> The pictures you see above are from the parts of the project that we actually were able to design and prototype while on campus that semester.
   
-<p>Link to final project slideshow: <a href="https://drive.google.com/file/d/1OWB4YcVAL1PRaMLIGwMwKbe7PK8V0sps/view?usp=sharing" taget="_blank">Ping Pong Ball Launcher</a></p>
+<p>Link to final project slideshow: <a href="https://drive.google.com/file/d/1OWB4YcVAL1PRaMLIGwMwKbe7PK8V0sps/view?usp=sharing" target="_blank">Ping Pong Ball Launcher</a></p>
