--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -15,12 +15,14 @@ title: About Me (Professional)
         <h2> Proficient </h2>
                 <ul>
                     <li> C++ programming language </li>
-                    <li> Unix/Linux operating system </li>
+                    <li> Object-oriented programming </li>
                     <li> Microsoft Word, Excel, and Powerpoint </li>
                     <li> Social Media platforms </li>
                 </ul>
         <h2> Novice </h2>
                 <ul>
+                    <li> Unix/Linux operating system </li>
+                    <li> Github </li>
                     <li> R programming language </li>
                     <li> Java programming language </li>
                     <li> MATLAB programming language </li>
@@ -61,7 +63,7 @@ title: About Me (Professional)
                 </ul></p>
                 <p> Relevant Coursework </p>
                 <ul>
-                    <li>Introduction to Programming Design Abstraction/Problem Solving; Fundamentals of Engineering Computing; Technology: Blessing or Curse; Leadership; Intro to Software Engineering Techniques; Design of Logic Circuits </li>
+                    <li>Algorithm Design/Analysis; Logic/Theory of Computers; Systems Programming; Design of Logic Circuits; Introduction to Programming Design Abstraction/Problem Solving; Intro to Software Engineering Techniques; Understanding Leadership; Introduction to Entrepreneurship</li>
                 </ul>
     
     <h1> <br /> Experience </h1>
@@ -107,6 +109,7 @@ title: About Me (Professional)
                 <ul>
                     <li>Fulfill all social media needs for the chapter including any graphic design jobs</li>
                     <li>Responsible for attending and contributing to officer meetings</li>
+                    <li>Part of the CatHacks Team which hosts our annual hackathon with hundreds of participants</li>
                 </ul>
         <h2> Phi Sigma Phi Honors Society </h2>
             <p><strong>Dates:</strong> October 2020 - Present </p>
