--- a/aboutMeProfessional.html
+++ b/aboutMeProfessional.html
@@ -16,16 +16,16 @@ title: About Me (Professional)
                 <ul>
                     <li> C++ programming language </li>
                     <li> Object-oriented programming </li>
+                    <li> MATLAB programming </li>
                     <li> Microsoft Word, Excel, and Powerpoint </li>
                     <li> Social Media platforms </li>
                 </ul>
         <h2> Novice </h2>
                 <ul>
                     <li> Unix/Linux operating system </li>
-                    <li> Github </li>
+                    <li> Git </li>
                     <li> R programming language </li>
                     <li> Java programming language </li>
-                    <li> MATLAB programming language </li>
                     <li> HTML language </li>
                     <li> GNU Debugger (GDB) </li>
                     <li> Shell Script </li>
@@ -63,14 +63,33 @@ title: About Me (Professional)
                 </ul></p>
                 <p> Relevant Coursework </p>
                 <ul>
-                    <li>Algorithm Design/Analysis; Logic/Theory of Computers; Systems Programming; Design of Logic Circuits; Introduction to Programming Design Abstraction/Problem Solving; Intro to Software Engineering Techniques; Understanding Leadership; Introduction to Entrepreneurship</li>
+                    <li>Database Systems; Data Structures and Algorithms; Artificial Intelligence; Computer Networking; Theory of Computers; Systems Programming; Design of Logic Circuits; Programming Design Abstraction/Problem Solving; Software Engineering Techniques; Understanding Leadership; Introduction to Entrepreneurship; Marketing Management</li>
                 </ul>
     
     <h1> <br /> Experience </h1>
 
+        <h2>Salesforce/Sumo Technician</h2>
+            <h3>University of Kentucky Transformative Learning</h3>
+                <p><strong>Dates:</strong> August 2021 - Present <br />
+                <strong>Location: Lexington, KY </p>
+                <ul>
+                    <li>Generating back-end programming within Salesforce and Sumo platforms used by the organizations</li>
+                    <li>Designing and implementing user interface using HTML for organizations key functions</li>
+                </ul>
+
+        <h2>Product Group Intern</h2>
+            <h3>Divisions Maintenance Group</h3>
+                <p><strong>Dates:</strong> May 2021 - August 2021 <br />
+                <strong>Location:</strong> Newport, KY </p>
+                <ul>
+                    <li>Planned and conducted user research to inform new product design and features</li>
+                    <li>Synthesized user research to create and present summary of insights to Chief Product Officer</li>
+                    <li>Set up Jira sprint boards and roadmaps in Aha via Jira integration</li>
+                    <li>Wrote, prioritized, and groomed user stories with the product team, while participating in team's agile ceremonies</li>
+                </ul>
         <h2>Valet Driver</h2>
             <h3> Xpress Valet </h3>
-                <p><strong>Dates:</strong> September 2019 - Present <br />
+                <p><strong>Dates:</strong> September 2019 - May 2021 <br />
                 <strong>Location:</strong> Lexington, KY </p>
                 <ul>
                     <li>Provide valet services to customers at contracted businesses including Keeneland and Dudley's on Short Street.</li>
@@ -127,5 +146,5 @@ title: About Me (Professional)
             <p><strong>Dates:</strong> August 2019 - March 2020 </p>
             <p> Participated in intramural flag football and basketball during the school year </p>
 
-    <h3> <br /> <br /> Anything else you want to know about me professionally may be found in my CV as it is probably more updated </h3>
+    <h3> <br /> <br /> Anything else you want to know about me professionally may be found in my CV. </h3>
         <p>Personal CV: <a href="https://drive.google.com/file/d/11hv0iUIH3mDuYCJvePU-3k55vWl40c8L/view?usp=sharing" target="_blank">Luke Williams CV</a></p>
